--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
         
-        En este capítulo se comentan los pasos seguidos para la implementación del sistema: se realiza la descripción del proceso a monitorear o planta, los sensores que incorpora...
+        En este capítulo se analizarán los pasos seguidos para la implementación del sistema: se realiza la descripción del proceso a monitorear o planta, los sensores que incorpora...
 
 \section{Descripción del sistema}
 
