--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -8,9 +8,13 @@
     \newline
     \textbf{GPIO} - General Purpose Input Output
     \newline
+    \textbf{HR} - Humedad Relativa
+    \newline
     \textbf{HTTP} - Hypertext Transfer Protocol
     \newline
     \textbf{IoT} - Internet de las Cosas o Internet of Things
+    \newline
+    \textbf{Lx} - Luxer (unidad de medida de la Iluminancia)
     \newline
     \textbf{MQTT} - Message Queing Telemetry Transport
     \newline
