--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -5,7 +5,7 @@
 
         En este capítulo se analiza el estado del arte del Internet de las Cosas y su aplicación en los museos a nivel internacional y nacional, así como la caracterización de la
         Colección de Arte y Arqueología Francisco Prat Puig teniendo en cuenta su estado en cuanto a la conservación de las piezas allí presentes. También se abordan las arquitecturas propuestas para IoT y la estipulación de una para el presente proyecto analizándola por partes.
-        Además se hace el análisis de las condiciones que favorecen el ataque de insectos xilófagos en las estructuras y en las obras pertenecientes a la colección. 
+        Además se hace el análisis de las condiciones que favorecen el ataque de insectos xilófagos en las estructuras y en las obras pertenecientes a la colección, así como los daños ocasionados por la variación de los valores de las variables microclimáticas tomando como referencias los recomendados por los autores.
 
     \section{Internet de las Cosas}
 
