--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -3,11 +3,12 @@
 \addcontentsline{toc}{section}{Introducción}
         \textbf{\Large Introducción}\newline
         
-        En este capítulo se analizarán los pasos seguidos para la implementación del sistema: se realiza la descripción del proceso a monitorear o planta, los sensores que incorpora...
+    En este capítulo se analizarán los pasos seguidos para la implementación del sistema: se realiza la descripción del proceso a monitorear o planta, los sensores que incorpora...
 
 \section{Descripción del sistema}
 
-    ...
+El sistema de supervisión se implementa sobre una prueba de concepto desarrollada para dar fe de la certeza en cuanto al análisis teórico desarrollado en todo el capítulo primero.
+
 
 
 \section{Sensores} \label{sec: sensores}
