--- a/capitulos/indice2.tex
+++ b/capitulos/indice2.tex
@@ -4,4 +4,5 @@
 \thispagestyle{plain}
 
 % \renewcommand{\thepage}{\roman{page}}
+\phantomsection
 \addcontentsline{toc}{section}{Índice de figuras}
