--- a/tesis.tex
+++ b/tesis.tex
@@ -3,6 +3,7 @@
 \usepackage{multirow}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage[utf8]{inputenc}
+\usepackage[breaklinks=true, hidelinks]{hyperref}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
