--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -25,9 +25,9 @@
     
         En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
     
-        Estos son solo dos de los ejemplos. La tabla 1.2 muestra una relación de otros autores que emplean el IoT en los museos. Pero antes, para poder comprender la tabla 1.2 debemos definir una primera tabla en la que se le otorga a cada autor un número de manera tal que se entienda quien es cada autor. Por lo que se define la tabla 1.1:
+        Estos son solo dos de los ejemplos. La tabla \ref{tab:iot_internacional} muestra una relación de otros autores que emplean el IoT en los museos. Pero antes, para poder comprender la tabla \ref{tab:iot_internacional} debemos definir una primera tabla en la que se le otorga a cada autor un número de manera tal que se entienda quien es cada autor. Por lo que se define la tabla \ref{tab:numeracion_autores}:
 
-    \begin{table}[h]
+    \begin{table}[H]
         \centering
         \caption{Numeración autores}
         \begin{tabular}{|c|c|}
@@ -47,7 +47,7 @@
         \label{tab:numeracion_autores}
     \end{table}
 
-    \begin{table}[H]
+    \begin{table}[h]
         \centering
         \caption{IoT en los museos internacionales}
         \begin{tabular}{|l|l|l|}
@@ -65,6 +65,8 @@
         \end{tabular}
         \label{tab:iot_internacional}
     \end{table}
+
+    \vspace{1.5cm}
 
     Como se puede observar en la tabla \ref{tab:iot_internacional} el mayor número de autores analizados centran su atención en el usuario que accede al museo en aras de brindarle una propuesta agradable en su visita.
 
