--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -140,11 +140,13 @@
         \centering
         \includegraphics[width=8cm, height=5cm]{imagenes/Comparacion-arquitecturas-1024x535}
         \caption{Comparación arquitecturas}
-            \subcaption*{Fuente: \cite{arquitecturaPaginaLuisGarcia}}
+            \subcaption*{Fuente: García \cite{arquitecturaPaginaLuisGarcia}}
         \label{imag:comparacionArquitecturas}
     \end{figure}
 
     En la figura \ref{imag:comparacionArquitecturas} se desarrolla una comparación entre las arquitecturas de 3 capas, 5 capas y la arquitectura niebla.
+
+    \newpage
 
     Según Ciberseguridad \cite{capasIoTciberseguridad}, la mayoría de estas arquitecturas de IoT se basan en fundamentos básicos:
     \begin{itemize}
