--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -556,7 +556,7 @@
     \begin{itemize}
         \item Se habló de la variedad de aplicaciones del Internet de las Cosas y de su relación con la conservación del patrimonio cultural. La descripción de las arquitecturas del IoT brindó la posibilidad de proponer la arquitectura del sistema que se desea implementar.
         \item Como parte del análisis de este sistema se explicó el concepto de sensor, de aquí se concluye que estos serán la unidad básica de adquisición de la información para nuestra arquitectura.
-        \item Se explicó el concepto de microcontrolador, fundamentando que se selecciona ESP-12F sobre las demás plataformas por las características expuestas durante el desarrollo.
+        \item Se explicó el concepto de microcontrolador, fundamentando que se selecciona ESP-12F sobre las demás plataformas por las características expuestas anteriormente.
         \item Se establecieron valores mínimos y máximos a modo de evitar la aparición del especies xilófagas en la colección objeto de estudio.
         \item Se analizaron las principales formas en las que se manifiestan los daños en distintos materiales ocasionados por valores microclimáticos fuera del rango de lo recomendado. 
     \end{itemize}
