--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -7,26 +7,26 @@
 
 \section{Descripción del sistema}
 
-El sistema de supervisión se implementa sobre una prueba de concepto desarrollada para dar fe de la certeza en cuanto al análisis teórico desarrollado en todo el capítulo primero.
+    El sistema de supervisión se implementa sobre una prueba de concepto desarrollada para dar fe de la certeza en cuanto al análisis teórico desarrollado en todo el capítulo primero.
+
+    ...
 
 
 
 \section{Sensores} \label{sec: sensores}
 
-    La secuencia de sensores pertenecientes al sistema es selecta, puesto que se tomaron los sensores teniendo en cuenta varios factores:
+    La secuencia de sensores pertenecientes al sistema es selecta, puesto que se tomaron los sensores teniendo en cuenta varios elementos:
 
     \begin{itemize}
         \item Variable a medir
-        \item Rango de operación
+        \item Rango de medición
         \item Precisión
         \item Voltaje de alimentación
         \item Corriente de alimentación
         \item Precio
     \end{itemize}
 
-    \vspace{1cm}
-
-    Resumiendo en la siguiente tabla los sensores a emplear según la variable a medir.
+    En la tabla \ref{tab:relacion_sensores} se relaciona el sensor a emplear según la variable a medir.
 
     \begin{table}[H]
         \centering
@@ -45,36 +45,33 @@ El sistema de supervisión se implementa sobre una prueba de concepto desarrolla
         \end{tabular}
     \end{table}
 
-% Se tomaron precios de referencia de los sensores de las páginas oficiales de compras online Amazon y Aliexpress para tener una idea del coste de montaje de los nodos.\\
+    Estos sensores estarán dispuestos en zonas específicas dentro de la colección, dígase en vitrinas o, para la captura de datos, en las salas.
+    Esto permite tener datos de dentro de las vitrinas y compararlos con los datos recolectados de las salas en general, posibilitando el análisis de las diferencias entre los máximos y mínimos de los valores recolectados.
+    
+    A continuación se analizan las características técnicas de cada sensor teniendo en cuenta los elementos descritos en el epígrafe \ref{sec: sensores}.
 
-% \begin{table}[H]
-%     \centering
-%     \caption{Relación precios de referencia}
-%     \subcaption*{Fuente: Elavoración propia}
-%     \begin{tabular}{|c|c|c|}
-%     \hline
-%     \textbf{Sensor} & \textbf{Precio Amazon (U)} & \textbf{Precio Aliexpress (U)} \\ \hline
-%     DHT22           & 13.69 – 16.99 \$           & 2 – 4 \$                       \\ \hline
-%     MH-Z19C         & -                          & 16.99 \$                       \\ \hline
-%     M0168           & -                          & 0.31 – 1.34 \$                 \\ \hline
-%     SDS011          & 14.62 \$                   & 17.64 \$                       \\ \hline
-%     LDR             & 14.50 \$                   & 0.82 \$                        \\ \hline
-%     BH1750          & -                          & 8.46 \$                        \\ \hline
-%     \end{tabular}
-%     \label{tab: precios_referencia}
-% \end{table}
+    \subsection{Sensor de temperatura/humedad DHT22}
 
-\subsection{Sensor de temperatura DHT22}
-
-  \begin{figure}[H]
+    \begin{figure}[H]
       \centering
       \includegraphics[width=5cm, height=5cm]{imagenes/dht22.jpg}
       \caption{Sensor DHT22}
       \subcaption*{Fuente: Datasheet fabricante}
       \label{imag:dht22}
-   \end{figure}
+    \end{figure}
    
-El DHT22 (AM2302) es un sensor digital de temperatura y humedad relativa de buen rendimiento y de bajo costo. Integra un sensor capacitivo de humedad y un termistor para medir el aire circundante, y muestra los datos mediante una señal digital en el pin de datos (no posee salida analógica).\\
+El DHT22 (AM2302) es un sensor digital de temperatura y humedad relativa de buen rendimiento y de bajo costo. Integra un sensor capacitivo de humedad y un termistor para medir el aire circundante, y muestra los datos mediante una señal digital en el pin de datos (no posee salida analógica).
+
+Utiliza tecnología exclusiva de recolección de señales digitales y tecnología de detección de humedad, lo que garantiza su confiabilidad y estabilidad. Sus elementos de detección están conectados con una computadora de un solo chip de 8 bits.\\
+
+\textbf{Especificaciones ténicas}
+
+\begin{itemize}
+    \item Modelo: AM2302
+    \item Voltaje de alimentación: 3.3-6V DC
+    \item Señal de salida: señal digital
+    \item Rango: humedad de 0 - 100\%HR || temperatura de -40 - 125°C
+\end{itemize}
 
 \begin{figure}[H]
     \centering
@@ -84,7 +81,24 @@ El DHT22 (AM2302) es un sensor digital de temperatura y humedad relativa de buen
     \label{imag:dimensiones_dht22}
 \end{figure}
 
-\vspace{1cm}
+Secuencia de números de pines: De izquierda a derecha 1,2,3,4
+
+\begin{table}[H]
+    \centering
+    \caption{Distribución pines DHT22}
+    \label{tab:pines_DHT}
+    \begin{tabular}{|l|l|}
+    \hline
+    Pin & Función            \\ \hline
+    1   & VDD - Alimentación \\ \hline
+    2   & DATA - Señal       \\ \hline
+    3   & NULL               \\ \hline
+    4   & GND                \\ \hline
+    \end{tabular}
+\end{table}
+
+Este sensor ...
+
 
 \subsection{Sensor de CO2 SGP30}
 
