--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -25,7 +25,7 @@
     
         En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
     
-        Estos son solo dos de los ejemplos. La tabla \ref{tab:iot_internacional} muestra una relación de otros autores que emplean el IoT en los museos. Pero antes, para poder comprender la tabla \ref{tab:iot_internacional} debemos definir una primera tabla en la que se le otorga a cada autor un número de manera tal que se entienda quien es cada autor. Por lo que se define la tabla \ref{tab:numeracion_autores}:
+        Estos son solo dos de los ejemplos. La tabla \ref{tab:iot_internacional} muestra una relación de otros autores que emplean el IoT en los museos. Pero antes, para poder comprender la tabla \ref{tab:iot_internacional} se define una primera tabla en la que se le otorga a cada autor un número de manera tal que se entienda quien es cada autor. Por lo que se define la tabla \ref{tab:numeracion_autores}:
 
     \begin{table}[H]
         \centering
@@ -50,18 +50,18 @@
     \begin{table}[h]
         \centering
         \caption{IoT en los museos internacionales}
-        \begin{tabular}{|l|l|l|}
+        \begin{tabular}{|c|l|l|}
         \hline
         \rowcolor[HTML]{9698ED} 
-        Manifestación       & Mediciones                                                                                                                                                     & Tecnología                                                                                                                                              \\ \hline
-        Temperatura         & {(}1,2,7{)} Temperatura °C                                                                                                                                     & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones),\\ {(}2{)} IoT-WSMP,\\ {(}7{)} RPI, ESP32, Node-Red.\end{tabular} \\ \hline
-        Humedad             & {(}1,2,7{)} Humedad \%                                                                                                                                         & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones),\\ {(}2{)} IoT-WSMP,\\ {(}7{)} RPI, ESP32, Node-Red.\end{tabular} \\ \hline
-        Intensidad luminosa & {(}2,7{)} Lumens                                                                                                                                               & \begin{tabular}[c]{@{}l@{}}{(}2{)} IoT-WSMP,\\ {(}7{)} RPI, ESP32, Sensores.\end{tabular}                                                               \\ \hline
-        Vibraciones         & {(}1{)} Estabilidad del Edificio (Hz)                                                                                                                          & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
-        Humo                & {(}1{)} C02 ppm                                                                                                                                                & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
-        Polución            & {(}1{)} Polvo                                                                                                                                                  & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
-        Xilófagos           & {(}1{)} Plagas de madera                                                                                                                                       & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
-        Personas            & \begin{tabular}[c]{@{}l@{}}{(}7{)} Aceleración, Toque.\\ {(}8{)} Geolocalización.\\ {(}3{)} Movimiento\\ {(}9{)} Propuestas de juegos en el museo\end{tabular} & \begin{tabular}[c]{@{}l@{}}{(}1{)} PIR, {(}4{)} IA,\\ {(}5{)} RPI, ESP32, Sensores.\end{tabular}                                                        \\ \hline
+        Manifestación       & Mediciones                                                                                                                                                        & Tecnología                                                                                                                                              \\ \hline
+        Temperatura         & {(}1,2,7{)} Temperatura °C                                                                                                                                        & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones),\\ {(}2{)} IoT-WSMP,\\ {(}7{)} RPI, ESP32, Node-Red.\end{tabular} \\ \hline
+        Humedad             & {(}1,2,7{)} Humedad \%                                                                                                                                            & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones),\\ {(}2{)} IoT-WSMP,\\ {(}7{)} RPI, ESP32, Node-Red.\end{tabular} \\ \hline
+        Intensidad luminosa & {(}2,7{)} Lumens                                                                                                                                                  & \begin{tabular}[c]{@{}l@{}}{(}2{)} IoT-WSMP,\\ {(}7{)} RPI, ESP32, Sensores.\end{tabular}                                                               \\ \hline
+        Vibraciones         & {(}1{)} Estabilidad del Edificio (Hz)                                                                                                                             & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
+        Humo                & {(}1{)} C02 ppm                                                                                                                                                   & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
+        Polución            & {(}1{)} Polvo                                                                                                                                                     & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
+        Xilófagos           & {(}1{)} Plagas de madera                                                                                                                                          & \begin{tabular}[c]{@{}l@{}}{(}1{)} RPI, Sensores, Cloud\\ SVM (Árboles de Decisiones).\end{tabular}                                                     \\ \hline
+        Personas            & \begin{tabular}[c]{@{}l@{}}{(}7{)} Aceleración, Toque.\\ {(}8{)} Geolocalización.\\ {(}3{)} Movimiento\\ {(}9{)} Propuestas de juegos\\en el museo\end{tabular}  & \begin{tabular}[c]{@{}l@{}}{(}1{)} PIR, {(}4{)} IA,\\ {(}5{)} RPI, ESP32, Sensores.\end{tabular}                                                        \\ \hline
         \end{tabular}
         \label{tab:iot_internacional}
     \end{table}
